# qt_concentration

./: CMakeLists.txt  README.md  images.qrc
include/: .clang_complete  card.hpp  concentration.hpp
sources/: .clang_complete  main.cpp
sources/cnc/: .clang_complete  card.cpp  concentration.cpp
